Add reverse proxy mode to BeeWAF for idts-back protection
- BeeWAF now acts as a reverse proxy WAF when BACKEND_URL is set
- Uses httpx.AsyncClient for async proxying to backend
- Forwards X-Forwarded-For, X-Forwarded-Proto, X-BeeWAF-Inspected headers
- Handles connection errors, timeouts with proper 502/504 responses
- Updated deployment.yaml: BACKEND_URL=http://idts-back.idts-test.svc.cluster.local:80
- Updated ingress-app-protected.yaml for idts.back.dpc.com.tn host
- Without BACKEND_URL, BeeWAF runs in demo mode (built-in routes)

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -60,6 +60,10 @@ spec:
           value: "/app/data/train_demo.csv"
         - name: ML_MODE
           value: "advanced"
+        # === REVERSE PROXY : forward clean traffic to the real app ===
+        # idts-back.idts-test.svc.cluster.local = the Spring Boot app
+        - name: BACKEND_URL
+          value: "http://idts-back.idts-test.svc.cluster.local:80"
         - name: BEEWAF_API_KEY
           valueFrom:
             secretKeyRef:
