Fix deployment: nodeName=testhamaster1, imagePullPolicy=Never, numpy<2.0, probes ajustées

--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -15,7 +15,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt ./
 # Install core Python dependencies explicitly to avoid failing on optional packages
 RUN pip install --no-cache-dir -U pip setuptools wheel && \
-    pip install --no-cache-dir fastapi uvicorn python-multipart aiofiles requests httpx numpy scikit-learn joblib python-json-logger prometheus-client
+    pip install --no-cache-dir "numpy<2.0" && \
+    pip install --no-cache-dir fastapi uvicorn python-multipart aiofiles requests httpx scikit-learn joblib python-json-logger prometheus-client
 
 COPY . /app
 ENV PYTHONUNBUFFERED=1
