--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -42,6 +42,8 @@ spec:
       - name: beewaf
         image: docker.io/library/beewaf:latest
         imagePullPolicy: Never
+        command: ["uvicorn"]
+        args: ["app.main:app", "--host", "0.0.0.0", "--port", "8000"]
         ports:
         - name: http
           containerPort: 8000
