--- a/k8s/elk-stack.yaml
+++ b/k8s/elk-stack.yaml
@@ -133,6 +133,10 @@ data:
     pipeline.batch.size: 125
     log.level: info
 
+  pipelines.yml: |
+    - pipeline.id: beewaf
+      path.config: "/usr/share/logstash/pipeline/beewaf.conf"
+
   beewaf.conf: |
     input {
       beats {
@@ -398,6 +402,9 @@ spec:
         - name: logstash-config
           mountPath: /usr/share/logstash/config/logstash.yml
           subPath: logstash.yml
+        - name: logstash-config
+          mountPath: /usr/share/logstash/config/pipelines.yml
+          subPath: pipelines.yml
         - name: logstash-config
           mountPath: /usr/share/logstash/pipeline/beewaf.conf
           subPath: beewaf.conf
